Removed redundant code and translated some responses.